// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-fr-test-secret.json 1`] = `
{
  "_id": "esv-fr-test-secret",
  "description": "this is a fr-config manager test secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_FR_TEST_SECRET_1}",
      "version": "1",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_FR_TEST_SECRET_2}",
      "version": "2",
    },
    {
      "status": "DISABLED",
      "valueBase64": "\${ESV_FR_TEST_SECRET_3}",
      "version": "3",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-frodo-test-secret-10.json 1`] = `
{
  "_id": "esv-frodo-test-secret-10",
  "description": "description10",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_FRODO_TEST_SECRET_10_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-frodo-test-secret-11.json 1`] = `
{
  "_id": "esv-frodo-test-secret-11",
  "description": "description11",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_FRODO_TEST_SECRET_11_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-frodo-test-secret-16.json 1`] = `
{
  "_id": "esv-frodo-test-secret-16",
  "description": "test new description",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_FRODO_TEST_SECRET_16_1}",
      "version": "1",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_FRODO_TEST_SECRET_16_2}",
      "version": "2",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-p1recognize-apikey.json 1`] = `
{
  "_id": "esv-p1recognize-apikey",
  "description": "PingOne Recognize Api Key",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_P1RECOGNIZE_APIKEY_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-prune-secrets.json 1`] = `
{
  "_id": "esv-prune-secrets",
  "description": "test config-manager push -p flag",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_PRUNE_SECRETS_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-saml-test.json 1`] = `
{
  "_id": "esv-saml-test",
  "description": "testing config manager esv placeholder handling",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_SAML_TEST_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret.json 1`] = `
{
  "_id": "esv-test-secret",
  "description": "Test Secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_1}",
      "version": "1",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_2}",
      "version": "2",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_3}",
      "version": "3",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4}",
      "version": "4",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_5}",
      "version": "5",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_6}",
      "version": "6",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_7}",
      "version": "7",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_8}",
      "version": "8",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_9}",
      "version": "9",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_10}",
      "version": "10",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_11}",
      "version": "11",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_12}",
      "version": "12",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_13}",
      "version": "13",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_14}",
      "version": "14",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-2.json 1`] = `
{
  "_id": "esv-test-secret-2",
  "description": "Test Secret Two",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_2_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-3.json 1`] = `
{
  "_id": "esv-test-secret-3",
  "description": "Test Secret Three",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_3_1}",
      "version": "1",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-4.json 1`] = `
{
  "_id": "esv-test-secret-4",
  "description": "Testing secret using versioning",
  "encoding": "generic",
  "useInPlaceholders": false,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_1}",
      "version": "1",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_2}",
      "version": "2",
    },
    {
      "status": "DISABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_3}",
      "version": "3",
    },
    {
      "status": "DISABLED",
      "valueBase64": "\${ESV_TEST_SECRET_4_4}",
      "version": "4",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -D secretTestDir1": should export all secrets and their versions in fr-config-manager style": secretTestDir1/esvs/secrets/esv-test-secret-5.json 1`] = `
{
  "_id": "esv-test-secret-5",
  "description": "Test secret in placeholders",
  "encoding": "generic",
  "useInPlaceholders": true,
  "versions": [
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_5_1}",
      "version": "1",
    },
    {
      "status": "ENABLED",
      "valueBase64": "\${ESV_TEST_SECRET_5_2}",
      "version": "2",
    },
  ],
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style" 1`] = `0`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style" 2`] = `""`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-fr-test-secret.json 1`] = `
{
  "_id": "esv-fr-test-secret",
  "description": "this is a fr-config manager test secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_FR_TEST_SECRET}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-frodo-test-secret-10.json 1`] = `
{
  "_id": "esv-frodo-test-secret-10",
  "description": "description10",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_FRODO_TEST_SECRET_10}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-frodo-test-secret-11.json 1`] = `
{
  "_id": "esv-frodo-test-secret-11",
  "description": "description11",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_FRODO_TEST_SECRET_11}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-frodo-test-secret-16.json 1`] = `
{
  "_id": "esv-frodo-test-secret-16",
  "description": "test new description",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_FRODO_TEST_SECRET_16}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-p1recognize-apikey.json 1`] = `
{
  "_id": "esv-p1recognize-apikey",
  "description": "PingOne Recognize Api Key",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_P1RECOGNIZE_APIKEY}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-prune-secrets.json 1`] = `
{
  "_id": "esv-prune-secrets",
  "description": "test config-manager push -p flag",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_PRUNE_SECRETS}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-saml-test.json 1`] = `
{
  "_id": "esv-saml-test",
  "description": "testing config manager esv placeholder handling",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_SAML_TEST}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret.json 1`] = `
{
  "_id": "esv-test-secret",
  "description": "Test Secret",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-2.json 1`] = `
{
  "_id": "esv-test-secret-2",
  "description": "Test Secret Two",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_2}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-3.json 1`] = `
{
  "_id": "esv-test-secret-3",
  "description": "Test Secret Three",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_3}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-4.json 1`] = `
{
  "_id": "esv-test-secret-4",
  "description": "Testing secret using versioning",
  "encoding": "generic",
  "useInPlaceholders": false,
  "valueBase64": "\${ESV_TEST_SECRET_4}",
}
`;

exports[`frodo config-manager pulls "frodo config-manager pull secrets -aD secretTestDir2": should export all the active only secrets in fr-config-manager style": secretTestDir2/esvs/secrets/esv-test-secret-5.json 1`] = `
{
  "_id": "esv-test-secret-5",
  "description": "Test secret in placeholders",
  "encoding": "generic",
  "useInPlaceholders": true,
  "valueBase64": "\${ESV_TEST_SECRET_5}",
}
`;
